# litevirt-api

./: Makefile.am  Makefile.in  README  configure.ac  lighttpd.cert  litevirt-api-server.py  litevirt-api.pem  litevirt-api.spec  litevirt-make-cert  litevirt.cert  server.py
LitevirtAPI/: Makefile.am  auth.py  daemon.py  errors.py  log.py  network.py  storage.py  token.py  utils.py  vm.py
LitevirtService/: Makefile.am
mimerender/: Makefile  Makefile.am  Makefile.in
pamauth/: Makefile.am
