#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.61])
AC_INIT([litevirt-api], [0.1.0], [litevirt-dev@litevirt.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign -Wno-portability tar-pax])

AM_PATH_PYTHON

AC_CONFIG_FILES([Makefile
                LitevirtService/Makefile
                LitevirtAPI/Makefile
                mimerender/Makefile])


AC_OUTPUT
